syntax = "proto3";
package pb;

// 同步消息触发
message SyncTrigger {
    int64 sync_sequence = 2; // 已经同步的序列号
}
